--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,9 +43,9 @@
                       Products
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">Cell phones</a>
-                      <a class="dropdown-item" href="#">Tablets</a>
                       <a class="dropdown-item" href="#">TVs</a>
+                      <a class="dropdown-item" href="#">Computers</a>
+                      <a class="dropdown-item" href="#">Smart phones</a>
                     </div>
                   </div>
             </li>
@@ -183,10 +183,12 @@
     <div class="container marketing">
 
         <!-- Three columns of text below the carousel - What's new? -->
-        <div class="row"><a class="text-centered">What's new?</a></div>
+        <hr>
+        <h4 id="whatsNew">What's new?</h4>
+        <hr>
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="images/spicy_tuna.jpeg" alt="Spicy tuna image">
+            <img class="img-thumbnail mx-auto" style="width: 300px;" src="images/spicy_tuna.jpeg" alt="Spicy tuna image">
             <h2>
               <a href="#">Spicy tuna rolls</a>
             </h2>
@@ -194,7 +196,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="images/shkembe_chorba.jpg" alt="shkembe chorba (Tripe soup)">
+            <img class="img-thumbnail mx-auto" style="width: 300px;" src="images/shkembe_chorba.jpg" alt="shkembe chorba (Tripe soup)">
             <h2>
               <a href="#">Bulgarian tripe soup</a>
             </h2>
@@ -202,7 +204,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="images/chocolate_cake.jpg" alt="Chocolate cake">
+            <img class="img-thumbnail mx-auto" style="width: 300px;" src="images/chocolate_cake.jpg" alt="Chocolate cake">
             <h2>
               <a href="#">The ultimate chocolate cake</a>
             </h2>
