Updated models in order to make them 1) comparable and 2) implement toString. Created a ProductService class which also extends GenericService class in order to add one more method (getMostRecentTen()) to the product service. Updated category, product, and user service implementations so that they prevent from sending to repository and db duplicate objects (objects that are already present in db). Moved RestControllers to folder rest_controllers and created another folder for Thymeleaf controllers (Controllers). Added Thymeleaf controllers - HomeThymeleafController and ProductThymeleafController. Added css, image, and js files in static resources folder and html files in both static and templates resources folders. Updated ProductControllerTests due to change in ProductService and its implementation class.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Demo website about e-commerce">
     <meta name="keywords" content="tv sets, smart phones, tablets">
-    <meta name="author" content="Vladimir Georgiev and Boris Zelev">
+    <meta name="author" content="Vladimir Georgiev and Boris Zhelev">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     
     <!-- Local CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Glyphicons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -288,31 +288,31 @@
             <div class="row">
                 <div class="col-sm">
                     <a class="brands-02" href="/en/samsung" title="Samsung"> 
-                        <img src="images/logos/Samsung_logo_256x256.png" data-mid="13" width="120" height="124" title="Samsung" alt="Samsung logo">  
+                        <img src="images/brand_logos/Samsung_logo_256x256.png" data-mid="13" width="120" height="124" title="Samsung" alt="Samsung logo">
                         <div class="brands-02-text">Samsung</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/apple" title="Apple"> 
-                        <img src="images/logos/apple-logo.jpg" data-mid="13" width="120" height="124" title="Apple" alt="Apple logo">  
+                        <img src="images/brand_logos/apple-logo.jpg" data-mid="13" width="120" height="124" title="Apple" alt="Apple logo">
                         <div class="brands-02-text">Apple</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/xiaomi" title="Xiaomi"> 
-                        <img src="images/logos/Xiaomi-logo.png" data-mid="13" width="120" height="124" title="Xiaomi" alt="Xiaomi logo">  
+                        <img src="images/brand_logos/Xiaomi-logo.png" data-mid="13" width="120" height="124" title="Xiaomi" alt="Xiaomi logo">
                         <div class="brands-02-text">Xiaomi</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/sony" title="Sony"> 
-                        <img src="images/logos/sony-logo 500x500.png" data-mid="13" width="120" height="124" title="Sony" alt="Sony logo">  
+                        <img src="images/brand_logos/sony-logo 500x500.png" data-mid="13" width="120" height="124" title="Sony" alt="Sony logo">
                         <div class="brands-02-text">Sony</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/htc" title="Htc"> 
-                        <img src="images/logos/htc-logo 500x500.png" data-mid="13" width="120" height="124" title="Htc" alt="Htc logo">  
+                        <img src="images/brand_logos/htc-logo 500x500.png" data-mid="13" width="120" height="124" title="Htc" alt="Htc logo">
                         <div class="brands-02-text">HTC</div>
                     </a>
                 </div>
@@ -320,31 +320,31 @@
             <div class="row">
                 <div class="col-sm">
                     <a class="brands-02" href="/en/philips" title="Philips"> 
-                        <img src="images/logos/philips-logo.jpg" data-mid="13" width="120" height="124" title="Philips" alt="Philips logo">  
+                        <img src="images/brand_logos/philips-logo.jpg" data-mid="13" width="120" height="124" title="Philips" alt="Philips logo">
                         <div class="brands-02-text">Philips</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/hp" title="Hp"> 
-                        <img src="images/logos/HP-logo 2000x2000.png" data-mid="13" width="120" height="124" title="Hp" alt="Hp logo">  
+                        <img src="images/brand_logos/HP-logo 2000x2000.png" data-mid="13" width="120" height="124" title="Hp" alt="Hp logo">
                         <div class="brands-02-text">HP</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/acer" title="Acer"> 
-                        <img src="images/logos/acer-logo 800x800.png" data-mid="13" width="120" height="124" title="Acer" alt="Acer logo">  
+                        <img src="images/brand_logos/acer-logo 800x800.png" data-mid="13" width="120" height="124" title="Acer" alt="Acer logo">
                         <div class="brands-02-text">Acer</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/doogee" title="Doogee"> 
-                        <img src="images/logos/doogee-logo.jpg" data-mid="13" width="120" height="124" title="Doogee" alt="Doogee logo">  
+                        <img src="images/brand_logos/doogee-logo.jpg" data-mid="13" width="120" height="124" title="Doogee" alt="Doogee logo">
                         <div class="brands-02-text">Doogee</div>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a class="brands-02" href="/en/lenovo" title="Lenovo"> 
-                        <img src="images/logos/lenovo-logo 500x500.png" data-mid="13" width="120" height="124" title="Lenovo" alt="Lenovo logo">  
+                        <img src="images/brand_logos/lenovo-logo 500x500.png" data-mid="13" width="120" height="124" title="Lenovo" alt="Lenovo logo">
                         <div class="brands-02-text">Lenovo</div>
                     </a>
                 </div>
@@ -366,6 +366,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/imsky/holder/master/holder.js"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
